# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  demo2.cast  demo3.cast  demo4.cast  demo5.cast  pyproject.toml  test.py
gendif/scripts/: gendif.py
gendiff/: build_tree.py  cli.py  compare_trees.py  generate_diff.py  new_file.py  open_file.py  parsing.py  parsing2.py
gendiff/choose_formaters/: choose_format.py  plain_format.py  stylish_format.py
gendiff/choose_formatters/: choose_format.py  choose_formatt.py  json_format.py  plain_formatt.py  stylish_format.py  stylish_formatt.py
gendiff/formators/: format.py  format_plain.py  format_stylish.py
gendiff/formatters/: choose_formatt.py  stylish_formatt.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file4.yaml
